test/Fail/No-erased-levels-in-primitives-2.agda
{-# OPTIONS --cubical --no-erased-levels-in-primitives #-}

open import Agda.Primitive.Cubical
